add more examples

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,19 @@
         <service
             android:name=".MyService"
             android:enabled="true"
-            android:exported="true" >
+            android:exported="true">
+        </service>
+
+        <service
+            android:name=".MyService2"
+            android:enabled="true"
+            android:exported="true">
+        </service>
+
+        <service
+            android:name=".MyService3"
+            android:enabled="true"
+            android:exported="true">
         </service>
     </application>
 
